refactor: improve request validation response
